# aviarium.corvidae.corvus_corone

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  TECHNICAL_REVIEW.md  docker-compose.yml  main.py  package.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: DOCUMENT_MAP.md  GLOSSARY.md  MANIFESTO.md  README.docs.md  README.md  ROADMAP.md  hpo_benchmark_architektura_HPO_benchmark.md  system_c4_architecture.md
docs/01-manifesto/: MANIFESTO.md
docs/01_manifesto/: MANIFESTO.md
docs/03-technical-contracts/: 01-data-format.md  02-interface-contracts.md  03-metric-taxonomy.md  04-public-api-contract.md
docs/03_technical_contracts/: metric-taxonomy.md
docs/05-community/: 01-contribution-guide.md  02-versioning-governance.md  03-notes.md
docs/05_community/: TASKS.md
docs/06-tutorials/: 00-template.md  01-cmd-first-study.md  02-researcher-design-and-execute-study.md  03-nevergrad-adapter.md  04-algorithm-author-onboarding.md  05-learner-socratic-mode.md  06-learner-algorithm-visualization.md  07-learner-algorithm-genealogy.md  uc-02-contribute-algorithm.md
docs/architecture/: c1-context.md  c2-containers.md  c3-components.md  c4-code.md
docs/design/: adr-001-layered-architecture.md  data-model.md  design-decisions.md
docs/methodology/: benchmarking-practices.md
docs/operations/: deployment-examples.md  deployment-guide.md  (+2 more)
examples/: experiment-config.json
scripts/: create_github_issues.py  fix-docs.py  pre-push  validate-docs.py
spikes/: spike_gitpython.py
tests/: conftest.py
(+275 files in other folders)
