[project]
name = "corvus-corone"
version = "0.1.0"
description = "Python library and pilot for HPO benchmarking."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"gitpython>=3.1.46",
	"pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
	"ruff>=0.6.8",
	"mypy>=1.11.0",
	"pytest>=8.3.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
namespace_packages = true
explicit_package_bases = false
exclude = [".venv", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
